5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1826_1655.log
== TEST (2019-06-12 18:34:09) 
-- CODE:
from numpy import*
e = array(eval(input("estado: ")))
i = 0
AC = 0
AM = 0
PA = 0
RO = 0
RR = 0
for 
if(size(e) > 1):
		e[i] == AC
		AC = AC + 1
	elif(size(e) > 1):
		e[i] == AM
		AM = AM + 1
	elif(size(e) > 1):
		e[i] == PA
		PA = PA + 1
	elif(size(e) > 1):
		e[i] == RO
		RO = RO + 1
	elif(size(e) > 1):
		e[i] == RR 
		RR = RR + 1
else:
	e[i] = 0
	
	i = i + 1
print(e)
-- ERROR:
File "XXXX", line 9
    for 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:37:18) 
-- CODE:
from numpy import*
e = array(eval(input("estado: ")))
i = 0
AC = 0
AM = 0
PA = 0
RO = 0
RR = 0
for x in 
if(size(e) > 1):
		e[i] == AC
		AC = AC + 1
	elif(size(e) > 1):
		e[i] == AM
		AM = AM + 1
	elif(size(e) > 1):
		e[i] == PA
		PA = PA + 1
	elif(size(e) > 1):
		e[i] == RO
		RO = RO + 1
	elif(size(e) > 1):
		e[i] == RR 
		RR = RR + 1
else:
	e[i] = 0
	
	i = i + 1
print(size(e))
print(e)
-- ERROR:
File "XXXX", line 9
    for x in 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:37:26) 
-- CODE:
from numpy import*
e = array(eval(input("estado: ")))
i = 0
AC = 0
AM = 0
PA = 0
RO = 0
RR = 0
for x in: 
if(size(e) > 1):
		e[i] == AC
		AC = AC + 1
	elif(size(e) > 1):
		e[i] == AM
		AM = AM + 1
	elif(size(e) > 1):
		e[i] == PA
		PA = PA + 1
	elif(size(e) > 1):
		e[i] == RO
		RO = RO + 1
	elif(size(e) > 1):
		e[i] == RR 
		RR = RR + 1
else:
	e[i] = 0
	
	i = i + 1
print(size(e))
print(e)
-- ERROR:
File "XXXX", line 9
    for x in: 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:37:45) 
-- CODE:
from numpy import*
e = array(eval(input("estado: ")))
i = 0
AC = 0
AM = 0
PA = 0
RO = 0
RR = 0
for x in e 
if(size(e) > 1):
		e[i] == AC
		AC = AC + 1
	elif(size(e) > 1):
		e[i] == AM
		AM = AM + 1
	elif(size(e) > 1):
		e[i] == PA
		PA = PA + 1
	elif(size(e) > 1):
		e[i] == RO
		RO = RO + 1
	elif(size(e) > 1):
		e[i] == RR 
		RR = RR + 1
else:
	e[i] = 0
	
	i = i + 1
print(size(e))
print(e)
-- ERROR:
File "XXXX", line 9
    for x in e 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:37:52) 
-- CODE:
from numpy import*
e = array(eval(input("estado: ")))
i = 0
AC = 0
AM = 0
PA = 0
RO = 0
RR = 0
for x in 'e' 
if(size(e) > 1):
		e[i] == AC
		AC = AC + 1
	elif(size(e) > 1):
		e[i] == AM
		AM = AM + 1
	elif(size(e) > 1):
		e[i] == PA
		PA = PA + 1
	elif(size(e) > 1):
		e[i] == RO
		RO = RO + 1
	elif(size(e) > 1):
		e[i] == RR 
		RR = RR + 1
else:
	e[i] = 0
	
	i = i + 1
print(size(e))
print(e)
-- ERROR:
File "XXXX", line 9
    for x in 'e' 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
